--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Loan Default Prediction</h1>
+      <h1>DefaultDefense</h1>
       <form action="/predict" method="post">
         <div class="form-group">
           <label for="age">Age</label>
@@ -207,6 +207,11 @@
             <label
               ><input type="radio" name="hasMortgage" value="No" />No</label
             >
+          </div>
+          <div class="hint">
+            A mortgage is an agreement between you and a lender that gives the
+            lender the right to take your property if you don’t repay the money
+            you’ve borrowed plus interest.
           </div>
         </div>
 
